force-app/main/default/objects/Derate_Value__c/Derate_Value__c.object-meta.xml
<CustomObject>
    <label>Derate Value</label>
    <nameField>
        <displayFormat>DV-{0000}</displayFormat>
        <label>Derate Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Derate Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>