force-app/main/default/objects/Derate_Value__c/fields/Derate__c.field-meta.xml
<CustomField>
    <fullName>Derate__c</fullName>
    <label>Derate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>