force-app/main/default/objects/Derate_Value__c/fields/DerateType__c.field-meta.xml
<CustomField>
    <fullName>DerateType__c</fullName>
    <label>DerateType</label>
    <length>8</length>
    <type>Text</type>
</CustomField>