force-app/main/default/objects/Derate_Value__c/fields/MatlCode__c.field-meta.xml
<CustomField>
    <fullName>MatlCode__c</fullName>
    <label>MatlCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>