force-app/main/default/objects/Derate_Value__c/fields/TempLL__c.field-meta.xml
<CustomField>
    <fullName>TempLL__c</fullName>
    <label>TempLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>