force-app/main/default/objects/Derate_Value__c/fields/TempUL__c.field-meta.xml
<CustomField>
    <fullName>TempUL__c</fullName>
    <label>TempUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>