force-app/main/default/objects/Derate_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Derate__c</columns>
    <columns>MatlCode__c</columns>
    <columns>TempLL__c</columns>
    <columns>TempUL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>